--- a/plugins/org.obeonetwork.jar2uml.core/.project
+++ b/plugins/org.obeonetwork.jar2uml.core/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.obeonetwork.jar2uml</name>
+	<name>org.obeonetwork.jar2uml.core</name>
 	<comment></comment>
 	<projects>
 	</projects>
