--- a/tools/demo.gen/build.properties
+++ b/tools/demo.gen/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .
-jre.compilation.profile = JavaSE-1.6
+customBuildCallbacks = build.acceleo
+jre.compilation.profile = JavaSE-1.7
