--- a/plugins/org.obeonetwork.jar2uml.core.tests/build.properties
+++ b/plugins/org.obeonetwork.jar2uml.core.tests/build.properties
@@ -1,5 +1,10 @@
-source.. = src/
+source.. = src/,\
+           src-gen/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               lib/,\
+               lib/cglib-nodep-2.2.3.jar,\
+               lib/objenesis-tck-2.1.jar
 jre.compilation.profile = JavaSE-1.6
+jars.compile.order = .
