--- a/plugins/org.obeonetwork.jar2uml.core.tests/pom.xml
+++ b/plugins/org.obeonetwork.jar2uml.core.tests/pom.xml
@@ -25,4 +25,17 @@
   <artifactId>org.obeonetwork.jar2uml.core.tests</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-surefire-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <configuration>
+          <testSuite>org.obeonetwork.jar2uml.core.tests</testSuite>
+          <testClass>org.obeonetwork.jar2uml.core.tests.unit.AllTests</testClass>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
