--- a/plugins/org.obeonetwork.jar2uml.core.tests/pom.xml
+++ b/plugins/org.obeonetwork.jar2uml.core.tests/pom.xml
@@ -33,7 +33,7 @@
         <version>${tycho-version}</version>
         <configuration>
           <testSuite>org.obeonetwork.jar2uml.core.tests</testSuite>
-          <testClass>org.obeonetwork.jar2uml.core.tests.unit.AllTests</testClass>
+          <testClass>org.obeonetwork.jar2uml.core.tests.AllTests</testClass>
         </configuration>
       </plugin>
     </plugins>
