--- a/plugins/org.obeonetwork.jdt2uml.ui/plugin.xml
+++ b/plugins/org.obeonetwork.jdt2uml.ui/plugin.xml
@@ -44,4 +44,9 @@
          </command>
       </menuContribution>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="org.obeonetwork.jdt2uml.ui.Startup"></startup>
+   </extension>
 </plugin>
