Provide a dedicated plugin to handle the IDE support

--- a/releng/org.obeonetwork.2uml.parent/pom.xml
+++ b/releng/org.obeonetwork.2uml.parent/pom.xml
@@ -53,6 +53,7 @@
 	
 	<module>../../plugins/org.obeonetwork.jdt2uml.core</module>
     <module>../../plugins/org.obeonetwork.jdt2uml.ui</module>
+    <module>../../plugins/org.obeonetwork.jdt2uml.ide</module>
 	<module>../../tests/org.obeonetwork.jdt2uml.core.tests</module>
 	
     <!-- features -->
